@@ -2,7 +2,7 @@
 # UPGRADING - upgrading OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: UPGRADING,v 1.33 2009-04-23 08:23:57 mh Exp $
+# $Id: UPGRADING,v 1.34 2009-04-27 11:28:51 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -36,6 +36,10 @@ to 2.4 first (1.1->1.2->1.3->2.0->2.1->2.2->2.3->2.4 ...).
       cat $OTRS_HOME/scripts/DBUpdate-to-2.4.mysql.sql | mysql -p -f -u root otrs
     PostgreSQL:
       cat $OTRS_HOME/scripts/DBUpdate-to-2.4.postgresql.sql | psql otrs
+
+*) Run the migration script (as OTRS user, _not_ as root):
+   You must execute the migration script to migrate some data from the old database
+   structure to the new one. Please run $OTRS_HOME/scripts/DBUpdate-to-2.4.pl!
 
 *) If _no_ RPM is used, execute $OTRS_HOME/bin/SetPermissions.pl!
 
